# 12kl_try

./: .breakpoints  .replit  04_04.py  11_04.py  1uzd.py  BICX.py  README.md  dati.db  dictionaries.py  main.py  masivi_vardnicas.py  pavel.py  pyproject.toml  web_scraping.py  xvxvvx.py
1_topic/: 2uzd.py  dictionaries.py  funkciju_trenins.py  lists.py  numbers.py
1_topic/01.11/: asp.py  hey.py
2_topic/: 06_12.py  V P.csv  bus.py  ladite.py  oop.py  snake.py
2_topic/30.11./: img.py
DatuBazes/: d_gramatina.py  db.py  k_gramatina.py
SQLite/: test.db
akmens,skeres,papirits/: dati.db
csv/: csv_meg.csv  csvfaili.py  skolenu_atzimes.csv
flask/: flask.py
json/: jsondati.json  jsonfaili.py  jsonfails.json
txt/: tekstafaili.py  tfails.txt
