[tool.poetry]
name = "repl_python3_12kltry"
version = "0.1.0"
description = ""
authors = ["ProgrammanaVVS <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.0"
replit = "^3.2.4"
bs4 = "^0.0.1"
PySimpleGUI = "^4.57.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
